Cleaned up CSS a bit. Changed minor things with slideshow on index.html; the arrows derived from html entities are no longer in italics, they also now grow when hovered over and shrink back down when not (I have also removed the black background that would appear behind them, the grow effect has replaced this).

--- a/Website/CSS/main.css
+++ b/Website/CSS/main.css
@@ -231,6 +231,20 @@ header {
 	cursor: pointer;
 }
 
+.submitquiz > button[type=submit] {
+	border: 1px solid #FFFFFF;
+	color: white;
+	background: #030303;
+	font-family: Trajan Pro;
+	text-transform: uppercase;
+	transform: scale(1.6,1.6);
+}
+
+.submitquiz > button[type=submit]:hover {
+	background: #343434;
+	cursor: pointer;
+}
+
 .bodyboximageknightsoul {
 	transform: scale(0.4,0.4); /*Try 0.3?*/
 	margin-top: -20%;
@@ -311,6 +325,7 @@ nav > ul > li > ul > li:hover {
 nav > ul > li > ul {
 	display: none;
 }
+
 nav > ul > li:hover > ul {
 	display: block;
 	z-index: 100;
@@ -342,7 +357,7 @@ nav > ul > li:hover > ul {
 .next {
 	cursor: pointer;
 	position: absolute;
-	top: 40%;
+	top: 45%;
 	width: auto;
 	padding: 16px;
 	margin-top: -50px;
@@ -352,6 +367,9 @@ nav > ul > li:hover > ul {
 	border-radius: 0 3px 3px 0;
 	user-select: none;
 	-webkit-user-select: none;
+	transition: all .1s ease-in-out;
+	font-style: normal;
+	transform: scale(1.3,1.3);
 }
 
 /* Position the "next button" to the right */
@@ -360,27 +378,10 @@ nav > ul > li:hover > ul {
 	border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color that's slightly transparent */
+/* On hover, enlargen the arrow size (with a smooth transition (defined in the .prev,.next divs))*/
 .prev:hover,
 .next:hover {
-	background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-	color: #f2f2f2;
-	font-size: 12px;
-	padding: 8px 12px;
-	position: absolute;
-	top: 0;
-}
-
-/* Container for image text */
-.caption-container {
-	text-align: center;
-	background-color: #1B2428;
-	padding: 2px 16px;
-	color: white;
+	transform: scale(1.8,1.8);
 }
 
 .row:after {
@@ -396,11 +397,16 @@ nav > ul > li:hover > ul {
 }
 
 /* Add a transparency effect for thumnbail images */
-.demo {
+.thumbnail {
 	opacity: 0.6;
 }
 
 .active,
-.demo:hover {
+.thumbnail:hover {
 	opacity: 1;
+}
+
+.radiobuttons > li > input[type=radio] {
+	margin-left: -10%;
+	
 }
